--- a/LLM_Find/config.ini
+++ b/LLM_Find/config.ini
@@ -1,6 +1,5 @@
 [API_Key]
-openai_key = XXX
-us_census_key = XXX
-openweather_key = XXX
-openTopography = XXX
-
+OpenAI_key = XXX
+OpenWeather_key = XXX
+US_Census_key = XXX
+OpenTopography = XXX
